examples/hello-world-namespaced.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: other
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-2-namespaced
  namespace: other
spec:
  ingressClassName: ngrok
  rules:
  - host: minimal-ingress-2-namespaced.ngrok.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-2-namespaced
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2-namespaced
  namespace: other
spec:
  selector:
    matchLabels:
      app: nginx-2-namespaced
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-2-namespaced
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-2-namespaced
  namespace: other
  labels:
    app: nginx-2-namespaced
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-2
