examples/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-class-example
spec:
  ingressClassName: ngrok
  rules:
  - host: ingress-class.ngrok.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: different-ingress-class-example
spec:
  ingressClassName: other # Example of using a different class than ngrok
  rules:
  - host: different-ingress-class.ngrok.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
